language/move-lang/tests/move_check/parser/function_type_missing_angle.exp
error: 

   ┌── tests/move_check/parser/function_type_missing_angle.move:3:11 ───
   │
 3 │     fun fn<T1, T2 () { }
   │           - To match this '<'
   │                   ^ Expected '>'
   │

